ON-44212 # Fixed error message string truncation

--- a/src/styles/validation-errors-card.scss
+++ b/src/styles/validation-errors-card.scss
@@ -138,10 +138,12 @@ $validation-errors-border-radius: 8px;
 
 .ob-validation-notification-card-item-text {
   white-space: nowrap;
+  overflow: hidden;
   font-size: 0.875rem;
 }
 
 .ob-validation-notification-card-item-text-error-message {
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
